--- a/#src/css/country.css
+++ b/#src/css/country.css
@@ -209,136 +209,34 @@ p {
   color: #F0F8F7;
   font-size: 1rem;
   z-index: 999;
+  background: #0A7990;
+  /* Media Queries
+	--------------------------------------------- */
 }
 
 .header__logo-link {
-  width: 20%;
-  margin-right: 5%;
+  min-width: 10rem;
+  margin-right: 1rem;
 }
 
 .header__logo {
   max-width: 9.625rem;
 }
 
-.header__input-wrap {
-  position: relative;
-  width: 60%;
-}
-
-.header__search {
-  width: 100%;
-  height: 1.625rem;
-  padding: 0 0.625rem 0 2.5rem;
-  -webkit-box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.45);
-          box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.45);
-}
-
-.header__search-btn {
-  position: absolute;
-  top: 0.3125rem;
-  left: 0.625rem;
-}
-
-.header__search-btn::after {
-  display: block;
-  content: ' ';
-  background: #fff;
-  background-image: url("../img/search.svg");
-  background-size: 1.0625rem 1.0625rem;
-  height: 1.0625rem;
-  width: 1.0625rem;
-}
-
-.header__socials {
+.header__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-@media all and (max-width: 767px) {
-  .header__socials {
-    display: none;
-  }
-}
-
-.header__social-link {
-  margin-left: 0.5625rem;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.header__social-link:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.header__soc-facebook::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/facebook.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.header__soc-twitter::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/twitter.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.header__soc-youtube::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/youtube.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.header__soc-inst::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/instagram.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.header__soc-google-plus::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/g-plus.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.header__bottom {
-  background: #0A7990;
-  height: auto;
-  width: 100%;
-  border-top: 1px solid #F0F8F7;
-}
-
-.header .main-menu {
-  display: block;
-  position: relative;
-  background: #0A7990;
-  border-top: 1px solid #F0F8F7;
-}
-
-.header .core-menu {
-  text-align: center;
-  overflow: hidden;
+.header__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 5.25rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -347,142 +245,281 @@ p {
           justify-content: space-between;
 }
 
-.header .core-menu__select {
-  width: 12rem;
-  padding: 0.3rem 0.3rem 0.3rem 0.5rem;
-  color: #0A7990;
-  font-size: 0.75rem;
-  cursor: pointer;
-}
-
-.header .core-menu__calc-btn {
-  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
-  background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
-  color: #F0F8F7;
-  font-weight: 700;
-  padding: 0.6rem 1.5rem;
-}
-
-.header .core-menu__calc-btn:hover {
-  -webkit-filter: drop-shadow(0px 0px 10px #EC3737);
-          filter: drop-shadow(0px 0px 10px #EC3737);
-}
-
-.header .core-menu__calc-btn:active {
-  -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
-          box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.header .core-menu li {
-  list-style: none;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.header .core-menu li a {
-  display: inline-block;
-  padding: 1em;
-  color: #F0F8F7;
-}
-
-.header .core-menu li a:hover {
-  background: #0A7990;
-  -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.5));
-          filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.5));
-  color: #F0F8F7;
-}
-
-.header .dropdown {
-  position: absolute;
-  width: 220px;
-  background: #F0F8F7;
-  text-align: left;
-  display: none;
-}
-
-.header .dropdown li {
-  display: block;
-}
-
-.header .dropdown li a {
-  width: 100%;
-  margin: 0 auto;
-  display: block;
-  color: #0A7990;
-  font-size: 0.75rem;
-  border-left: 4px solid rgba(255, 0, 0, 0);
-  border-bottom: 0.5px solid rgba(1, 111, 157, 0.5);
-  margin-bottom: -0.5px;
-}
-
-.header .dropdown li a:hover {
-  background: #0A7990;
-  color: #F0F8F7;
-  border-left: 4px solid #EB0202;
-}
-
-.header .dropdown2 {
-  position: absolute;
-  width: 220px;
-  background: #F0F8F7;
-  text-align: left;
-  display: none;
-  right: -100%;
-  top: 0;
-}
-
-.header .dropdown2 li {
-  display: block;
-}
-
-.header .dropdown2 li a {
-  display: block;
-  font-size: 0.75rem;
-}
-
-.header li span.toggle2 {
-  position: absolute;
-  right: 0;
-  margin-right: 10px;
-}
-
-.header .dropdown3 {
-  position: absolute;
-  width: 220px;
-  background: #F0F8F7;
-  text-align: left;
-  display: none;
-  right: -100%;
-  top: 0;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  max-height: 23.8rem;
-}
-
-.header .dropdown3 li {
-  display: block;
-}
-
-.header .dropdown3 li a {
+.header__contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 0.75rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 2rem;
 }
 
-.header li span.toggle3 {
-  position: absolute;
-  right: 0;
-  margin-right: 20px;
+.header__contacts li {
+  color: #F0F8F7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 3rem;
 }
 
-.header .hamburger-menu {
-  padding: 1em;
+.header__contacts a {
+  color: #F0F8F7;
+  font-family: "Montserrat", sans-serif;
+  line-height: 170%;
+}
+
+.header__email:before {
+  display: block;
+  content: ' ';
+  background-image: url("../img/mail.svg");
+  background-size: 1.0625rem 0.8125rem;
+  height: 0.8125rem;
+  width: 1.0625rem;
+  margin: 0.22rem 0.4125rem 0 0;
+}
+
+.header__phone:before {
+  display: block;
+  content: ' ';
+  background-image: url("../img/telephone.svg");
+  background-size: 1rem 1rem;
+  height: 1rem;
+  width: 1rem;
+  margin: 0.2rem 0.4125rem 0 0;
+}
+
+.header p {
+  text-align: center;
+}
+
+.header .toggle, .header [class^=drop] {
   display: none;
-  font: normal normal normal 16px/1 Roboto;
-  text-transform: uppercase;
+}
+
+.header nav {
+  margin: 0;
+  padding: 0;
+  background-color: #0A7990;
+  color: #095F71;
+}
+
+.header nav ul {
+  float: right;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: relative;
+}
+
+.header nav ul li {
+  margin: 0px 5px 0 0;
+  display: inline-block;
+  background-color: #0A7990;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-left: 4px solid #0A7990;
+  color: #095F71;
+}
+
+.header nav ul li:hover {
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  border-left: 4px solid #F96B30;
+  color: #F0F8F7;
+}
+
+.header nav a {
+  display: block;
+  padding: 0 20px;
+  font-size: 0.75rem;
+  line-height: 2.5rem;
+  color: #095F71;
+  text-decoration: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media all and (max-width: 1240px) {
+  .header nav a {
+    padding: 0 10px;
+  }
+}
+
+.header .menu .header__nav-menu-cap {
+  color: #F0F8F7;
+  line-height: 72px;
+  font-size: 1rem;
+}
+
+.header nav ul li ul li {
+  border-left: 4px solid #F0F8F7;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: #F0F8F7;
+}
+
+.header nav ul li ul li:hover {
+  border-left: 4px solid #F96B30;
+  background: #0A7990;
+}
+
+.header nav ul li ul li > a {
+  border-bottom: 0.5px solid rgba(10, 121, 144, 0.1);
+  margin: 0 10px 0 10px;
+  padding: 0;
+}
+
+.header nav ul li ul li:last-child > a {
+  border-bottom: none;
+}
+
+.header nav ul li ul li:hover > a {
+  color: #F0F8F7;
+}
+
+.header nav ul ul {
+  display: none;
+  position: absolute;
+  top: 72px;
+}
+
+.header nav ul li:hover > ul {
+  display: inherit;
+}
+
+.header nav ul ul li {
+  width: 195px;
+  float: none;
+  display: list-item;
+  position: relative;
+}
+
+.header nav ul ul ul li {
+  position: relative;
+  top: -72px;
+  left: 191px;
+}
+
+.header nav ul li ul li > a:after {
+  content: ' >';
+  position: absolute;
+  right: 10px;
+  top: -1px;
+}
+
+.header .dropdown li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header li > a:only-child:after {
+  content: '';
+}
+
+.header .dropdown {
+  width: 195px;
+  background: #F0F8F7;
+  text-align: left;
+  right: -102%;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  max-height: 25rem;
+  top: 0;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+          box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.header .dropdown li {
+  top: 0;
+  left: 0;
+}
+
+.header ::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 5px;
+}
+
+.header ::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 1px rgba(4, 247, 226, 0.5);
+          box-shadow: 0 0 1px rgba(4, 247, 226, 0.5);
+}
+
+@media all and (max-width: 768px) {
+  .header nav {
+    margin: 0;
+  }
+  .header .toggle + a,
+  .header .menu {
+    display: none;
+  }
+  .header .toggle {
+    display: block;
+    background-color: #254441;
+    padding: 0 20px;
+    color: #FFF;
+    font-size: 20px;
+    line-height: 60px;
+    text-decoration: none;
+    border: none;
+  }
+  .header .toggle:hover {
+    background-color: #000000;
+  }
+  .header [id^=drop]:checked + ul {
+    display: block;
+  }
+  .header nav ul li {
+    display: block;
+    width: 100%;
+  }
+  .header nav ul ul .toggle,
+  .header nav ul ul a {
+    padding: 0 40px;
+  }
+  .header nav ul ul ul a {
+    padding: 0 80px;
+  }
+  .header nav a:hover,
+  .header nav ul ul ul a {
+    background-color: #000000;
+  }
+  .header nav ul li ul li .toggle,
+  .header nav ul ul a {
+    background-color: #212121;
+  }
+  .header nav ul ul {
+    float: none;
+    position: static;
+    color: #ffffff;
+  }
+  .header nav ul ul li:hover > ul,
+  .header nav ul li:hover > ul {
+    display: none;
+  }
+  .header nav ul ul li {
+    display: block;
+    width: 100%;
+  }
+  .header nav ul ul ul li {
+    position: static;
+  }
+}
+
+@media all and (max-width: 330px) {
+  .header nav ul li {
+    display: block;
+    width: 94%;
+  }
 }
 
 .header .germany::before {
@@ -1000,243 +1037,47 @@ p {
   margin-right: 1rem;
 }
 
-@media (max-width: 720px) {
-  .header .main-menu {
-    height: 56px;
-  }
-  .header .container-menu {
-    width: 100%;
-  }
-  .header .navigation {
-    float: left;
-    display: block;
-    width: 100%;
-  }
-  .header .core-menu {
-    float: right;
-    width: 100%;
-    background: #1a1a1a;
-    margin: auto;
-    display: none;
-  }
-  .header .core-menu li {
-    width: 100%;
-    display: block;
-  }
-  .header .core-menu li a {
-    display: block;
-    margin: auto;
-  }
-  .header .hamburger-menu {
-    display: block;
-    text-align: center;
-    padding-right: 60px;
-    float: none;
-    width: 100%;
-  }
-  .header .burger-1, .header .burger-2, .header .burger-3 {
-    display: block;
-    position: absolute;
-    width: 20px;
-    height: 3px;
-    border-radius: 30px;
-    right: 0;
-    margin-right: 25px;
-    background: #fff;
-    -webkit-transition: .2s ease;
-    transition: .2s ease;
-  }
-  .header .burger-1 {
-    top: 15px;
-  }
-  .header .burger-2 {
-    top: 23px;
-  }
-  .header .burger-3 {
-    top: 31px;
-  }
-  .header .burger-1.open, .header .burger-2.open, .header .burger-3.open {
-    -webkit-transition: .2s ease;
-    transition: .2s ease;
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-  }
-  .header .burger-1.open {
-    top: 25px;
-    width: 23px;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-  }
-  .header .burger-2.open {
-    opacity: 0;
-  }
-  .header .burger-3.open {
-    top: 25px;
-    width: 23px;
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-  }
-  .header .dropdown {
-    width: 100%;
-    background: #0e0e0e;
-    text-align: center;
-    position: relative;
-  }
-  .header .dropdown2 {
-    right: 0;
-    top: 0;
-    width: 100%;
-    position: relative;
-    padding: 0 20px;
-  }
-}
-
-.header-top {
-  background: #0A7990;
-  height: auto;
-}
-
-.header-top__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  min-height: 6.25rem;
-  height: auto;
-  width: 100%;
-}
-
-.header-top__panel {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  width: 100%;
-}
-
-@media all and (max-width: 767px) {
-  .header-top__panel {
-    display: none;
-  }
-}
-
-.header-top__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: auto;
-  min-height: 1.5rem;
-  width: 100%;
-  margin: 0.1875rem 0;
-}
-
-.header-top__contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-family: "Montserrat", sans-serif;
-}
-
-.header-top__contacts li {
+.calc-btn {
+  position: fixed;
+  top: 5.25rem;
+  left: 3rem;
+  font-size: 1.125rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
+  background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
   color: #F0F8F7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: 3rem;
-}
-
-.header-top__contacts a {
-  color: #F0F8F7;
-}
-
-.header-top__email:before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/mail.svg");
-  background-size: 1.0625rem 0.8125rem;
-  height: 0.8125rem;
-  width: 1.0625rem;
-  margin: 0.22rem 0.4125rem 0 0;
-}
-
-.header-top__phone:before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/telephone.svg");
-  background-size: 1rem 1rem;
-  height: 1rem;
-  width: 1rem;
-  margin: 0.2rem 0.4125rem 0 0;
-}
-
-.side-nav {
-  position: absolute;
-  top: 40.625rem;
-  left: 3.75rem;
-  padding: 50px 40px;
-  min-height: 30rem;
-  z-index: 3;
-  background: linear-gradient(104.5deg, #095F71 0%, #0F778C 100%);
   display: none;
+  padding: 14px 15px;
+  text-align: center;
+  min-height: 3rem;
+  width: 15rem;
+  z-index: 1001;
+  cursor: pointer;
 }
 
 @media all and (max-width: 1699px) {
-  .side-nav {
-    display: none;
+  .calc-btn {
+    left: 0;
   }
 }
 
-@media only screen and (max-width: 1800px) {
-  .side-nav {
-    left: 1rem;
-  }
+.calc-btn:hover {
+  -webkit-filter: drop-shadow(0px 0px 10px #EC3737);
+          filter: drop-shadow(0px 0px 10px #EC3737);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
-.side-nav__list {
-  font-size: 1.125rem;
-  font-weight: 500;
-}
-
-.side-nav__item {
-  margin-bottom: 1rem;
-}
-
-.side-nav__link:hover {
-  opacity: 1;
-  border-bottom: 2px solid #EB0202;
-}
-
-.side-nav__link {
-  color: #F0F8F7;
-  opacity: 0.65;
-}
-
-.side-nav .side-nav__link ~ .active {
-  opacity: 1;
-  border-bottom: 2px solid #EB0202;
+.calc-btn:active {
+  -webkit-box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+          box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 0.6);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .from-germany {
   position: relative;
   height: auto;
-  margin-top: 9.25rem;
+  margin-top: 5.25rem;
   overflow: hidden;
 }
 
@@ -1934,6 +1775,10 @@ p {
   margin-top: 0.5rem;
 }
 
+.about__video-wrap {
+  width: 100%;
+}
+
 .about__video-area {
   background: #fff;
   padding: 4rem 0;
@@ -2279,16 +2124,22 @@ p {
   max-width: 14rem;
 }
 
-.route__plus::before {
-  margin: 0rem 1rem 0 0;
+.route__benefit {
+  position: relative;
+}
+
+.route__benefit::before {
+  position: absolute;
+  top: 25%;
+  left: -7rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   content: ' ';
   background-image: url("../img/like.svg");
-  background-size: 2.5rem 2.5rem;
-  height: 2.5rem;
-  width: 2.5rem;
+  background-size: 5rem 5rem;
+  height: 5rem;
+  width: 5rem;
 }
 
 .route__minus {
@@ -2307,8 +2158,14 @@ p {
   max-width: 14rem;
 }
 
-.route__minus::before {
-  margin: 0 1rem 0rem 0;
+.route__negative {
+  position: relative;
+}
+
+.route__negative::before {
+  position: absolute;
+  top: 25%;
+  left: -7rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2316,9 +2173,9 @@ p {
           transform: rotate(180deg);
   content: ' ';
   background-image: url("../img/like.svg");
-  background-size: 2.5rem 2.5rem;
-  height: 2.5rem;
-  width: 2.5rem;
+  background-size: 5rem 5rem;
+  height: 5rem;
+  width: 5rem;
 }
 
 .route .slick-prev {
@@ -2934,11 +2791,15 @@ p {
 }
 
 .docs__import {
+  position: relative;
+  z-index: 2;
   margin-bottom: 3rem;
 }
 
 .docs__export {
   margin-left: 3rem;
+  position: relative;
+  z-index: 2;
 }
 
 .docs .slick-prev, .docs .slick-next {
@@ -3274,13 +3135,12 @@ p {
 .service__img {
   -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
           filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
+  max-width: 260px;
+  max-height: 160px;
 }
 
-@media all and (max-width: 1240px) {
-  .service__img {
-    max-width: 260px;
-    max-height: 160px;
-  }
+.service__img--2 {
+  margin-right: 1rem;
 }
 
 .service .vertical-tabs:before {
@@ -3341,15 +3201,12 @@ p {
           box-sizing: border-box;
 }
 
-.service .tabs li:hover a {
+.service .tabs li.active a {
+  z-index: 2;
   background: -webkit-gradient(linear, left top, left bottom, from(#F96B30), to(#D51B1B));
   background: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
   color: #F0F8F7;
   border: 1px solid #F96B30;
-}
-
-.service .tabs li.active a {
-  z-index: 2;
 }
 
 .service .tabs-content .content {
