--- a/#src/css/country.css
+++ b/#src/css/country.css
@@ -4179,13 +4179,18 @@ p {
   font-size: 1.4rem;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  margin: -5px 0 0 4px;
+  margin: -8px 0 0 4px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.info .info__arrow + .rotate {
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
 
 .info .hide {
