--- a/#src/scss/country.scss
+++ b/#src/scss/country.scss
@@ -3258,9 +3258,12 @@
 	&__arrow { 
 		font-size: 1.4rem;
 		transform: rotate(180deg);
-		margin: -5px 0 0 4px;
+		margin: -8px 0 0 4px;
 		display: flex;
 		align-items: center;
+	}
+	.info__arrow +.rotate {
+		transform: rotate(0deg);
 	}
 	.hide {
 		height: auto;
